v0.1.4    Tue, 21 Nov 2017 16:14:21 +0900
  - Add $MAX_SUIT_COUPON_PRICE

v0.1.3    Wed, 15 Nov 2017 14:49:24 +0900
  - Add SHIPPING_DEADLINE_HOUR constants

v0.1.2    Tue, 24 Oct 2017 15:23:27 +0900
  - Add missing deps

v0.1.1    Thu, 04 May 2017 15:58:54 +0900
  - "재활용(비전)" 과 관련된 상태를 추가

v0.1.0    Mon, 01 May 2017 16:36:30 +0900
  - 반납 -> 환불 기능 추가 (#4)

v0.0.17   Tue, 18 Apr 2017 16:02:34 +0900
  - Add OpenCloset::Common::Unpaid::merchant_uid
  - Add OpenCloset::Common::Unpaid::create_vbank

v0.0.16   Mon, 10 Apr 2017 13:08:02 +0900
  - Add %OpenCloset::Constants::Measurement::AVG_LEG_BY_HEIGHT
  - Add %OpenCloset::Constants::Measurement::AVG_KNEE_BY_HEIGHT

v0.0.15   Mon, 20 Mar 2017 17:02:51 +0900
  - OpenCloset::Common::Unpaid 모듈 추가 (#3)

v0.0.14   Tue, 07 Mar 2017 15:14:55 +0900
  - Category 에 BAG 을 추가

v0.0.13   Wed, 15 Feb 2017 12:40:08 +0900
  - Remove $RENTAL_BUFFER and $PARCEL_BUFFER
  - Fix $SHIPPING_BUFFER from 3 to 2

v0.0.12   Tue, 14 Feb 2017 12:27:47 +0900
  - Add %PAY_METHOD_MAP

v0.0.11   Fri, 10 Feb 2017 13:21:02 +0900
  - Add OpenCloset::Constants

v0.0.10   Thu, 19 Jan 2017 12:26:46 +0900
  - export $WAITING_DEPOSIT

v0.0.9    Thu, 19 Jan 2017 12:09:11 +0900
  - 입금대기 상태를 추가

v0.0.8    Tue, 03 Jan 2017 13:21:58 +0900
  - 온라인 상태를 update
  - @OpenCloset::Constants::Measurement::PRIMARY 에 윗배와 엉덩이 둘레를 추가

v0.0.7    Fri, 01 Jul 2016 15:17:57 +0900
  - 사이즈제안에서 여성팬츠를 고려

v0.0.6    Fri, 20 May 2016 17:42:37 +0900
  - category 의 export 변수 추가

v0.0.5    Fri, 20 May 2016 17:17:17 +0900
  - Export category hash MAPs

v0.0.4    Sat, 14 May 2016 05:45:57 +0900
  - resize 된 허리 둘레에 맞춰서 밑단을 계산하도록 함

v0.0.3    Thu, 12 May 2016 13:12:24 +0900
  - Fix assigned clothes top, bottom syntax

v0.0.2    Thu, 12 May 2016 12:34:40 +0900
  - 정해진 표를 통해 의류의 수선 사이즈를 제안
  - Add OpenCloset::Constants::Status
  - Add OpenCloset::Common::Clothes

v0.0.1    Mon, 02 May 2016 18:56:40 +0900
  - Initial release