@@ -1,3 +1,6 @@
+  - Add %MAX_SUIT_TYPE_COUPON_PRICE
+  - Remove $MAX_SUIT_COUPON_PRICE
+
 v0.1.4    Tue, 21 Nov 2017 16:14:21 +0900
   - Add $MAX_SUIT_COUPON_PRICE
 
